--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
   <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/cstyle.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -84,20 +85,13 @@
         </div>
         <div class="three offset-by-one columns">
           <img src="images/book.fw.png" width="50">
-          <button id="mlboard" onclick="toggleCat('mlboard')">Modern Library Board Picks</button>
-          <button id="mlfans" onclick="toggleCat('mlfans')" >Modern Library Fan Picks</button>
+          <button id="mlboard" onclick="toggleCat('mlboard')">ML Board Picks</button>
+          <button id="mlfans" onclick="toggleCat('mlfans')" >ML Fan Picks</button>
         </div>
         <div class="three offset-by-one columns">
           <img src="images/person.fw.png" width="50">
           <button id="famous" onclick="toggleCat('famous')" >100 Most Famous</button>
         </div>
-      </div>
-      <div class="container">
-        <div class="three offset-by-one columns">
-          <img src="images/place.fw.png" width="50">
-        </div>
-
-        
       </div>
      </div>
      <div class="container">
